[gd_scene load_steps=30 format=2]

[ext_resource path="res://files/theme.tres" type="Theme" id=1]
[ext_resource path="res://files/scripts/dating.gd" type="Script" id=2]
[ext_resource path="res://files/buttons/effects/blur.shader" type="Shader" id=3]
[ext_resource path="res://files/buttons/effects/white.png" type="Texture" id=4]
[ext_resource path="res://files/buttons/dating/1.png" type="Texture" id=5]
[ext_resource path="res://files/buttons/portraits/6.png" type="Texture" id=6]
[ext_resource path="res://files/buttons/inventory/3.png" type="Texture" id=7]
[ext_resource path="res://files/buttons/portraits/1.png" type="Texture" id=8]
[ext_resource path="res://files/outsidefont.tres" type="DynamicFont" id=9]
[ext_resource path="res://files/buttons/dating/2.png" type="Texture" id=10]
[ext_resource path="res://files/buttons/dating/6.png" type="Texture" id=11]
[ext_resource path="res://files/buttons/dating/7.png" type="Texture" id=12]
[ext_resource path="res://files/buttons/dating/3.png" type="Texture" id=13]
[ext_resource path="res://Roundo-Medium.otf" type="DynamicFontData" id=14]
[ext_resource path="res://files/buttons/dating/8.png" type="Texture" id=15]
[ext_resource path="res://files/buttons/dating/5.png" type="Texture" id=16]
[ext_resource path="res://files/buttons/dating/9.png" type="Texture" id=17]
[ext_resource path="res://files/buttons/dating/4.png" type="Texture" id=18]
[ext_resource path="res://files/buttons/hourglass.png" type="Texture" id=19]
[ext_resource path="res://files/buttons/mana.png" type="Texture" id=20]
[ext_resource path="res://files/images/items/supply.png" type="Texture" id=21]
[ext_resource path="res://files/buttons/mainscreen/gold.png" type="Texture" id=22]

[sub_resource type="ShaderMaterial" id=1]
render_priority = 1
shader = ExtResource( 3 )
shader_param/blurSize = null

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1353, 607 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 1353, 383 )

[sub_resource type="DynamicFont" id=4]
size = 36
use_filter = true
extra_spacing_top = 1
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="date" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 1 )
margin_left = -1.0
margin_top = -1.0
margin_right = 1378.0
margin_bottom = 774.0
texture = ExtResource( 4 )
expand = true

[node name="fullbody" type="TextureRect" parent="."]
margin_left = 803.0
margin_top = 52.0
margin_right = 1525.0
margin_bottom = 767.0
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="textfield" type="Panel" parent="."]
margin_left = 5.0
margin_top = 362.0
margin_right = 969.0
margin_bottom = 765.0
custom_styles/panel = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="textfield"]
margin_left = 45.0
margin_top = 24.0
margin_right = 738.0
margin_bottom = 303.0
bbcode_enabled = true

[node name="slaveportrait" type="TextureRect" parent="textfield"]
margin_left = 755.0
margin_top = 8.0
margin_right = 945.0
margin_bottom = 198.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="TextureRect" type="TextureRect" parent="textfield/slaveportrait"]
margin_right = 190.0
margin_bottom = 190.0
texture = ExtResource( 7 )
expand = true

[node name="masterportrait" type="TextureRect" parent="textfield"]
margin_left = 756.0
margin_top = 203.0
margin_right = 946.0
margin_bottom = 393.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 7

[node name="TextureRect" type="TextureRect" parent="textfield/masterportrait"]
margin_left = -1.0
margin_top = 1.0
margin_right = 189.0
margin_bottom = 191.0
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="textfield"]
margin_left = 317.0
margin_top = -360.0
margin_right = 629.0
margin_bottom = -302.0
custom_fonts/font = ExtResource( 9 )
text = "Test"
align = 1

[node name="panel" type="Panel" parent="."]
margin_left = 4.0
margin_top = 58.0
margin_right = 968.0
margin_bottom = 361.0
custom_styles/panel = SubResource( 3 )

[node name="categories" type="HBoxContainer" parent="panel"]
editor/display_folded = true
margin_left = 16.0
margin_top = 12.0
margin_right = 216.0
margin_bottom = 57.0

[node name="Actions" type="Button" parent="panel/categories"]
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 45 )
toggle_mode = true
text = "Actions"

[node name="P&P" type="Button" parent="panel/categories"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 45 )
toggle_mode = true
text = "Discipline"

[node name="Items" type="Button" parent="panel/categories"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 45 )
toggle_mode = true
text = "Items"

[node name="Location" type="Button" parent="panel/categories"]
margin_left = 612.0
margin_right = 812.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 45 )
toggle_mode = true
text = "Location"

[node name="ScrollContainer" type="ScrollContainer" parent="panel"]
editor/display_folded = true
margin_left = 16.0
margin_top = 64.0
margin_right = 920.0
margin_bottom = 269.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="panel/ScrollContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 3

[node name="Button" type="Button" parent="panel/ScrollContainer/GridContainer"]
visible = false
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Test"

[node name="consent" type="Label" parent="panel"]
margin_left = 21.0
margin_top = 275.0
margin_right = 181.0
margin_bottom = 295.0
custom_colors/font_color = Color( 0.910156, 0.359085, 0.88863, 1 )
text = "Intimacy Unlocked"

[node name="mood" type="TextureProgress" parent="."]
margin_left = 843.0
margin_top = 81.0
margin_right = 875.0
margin_bottom = 303.0
value = 50.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 12 )
fill_mode = 3

[node name="TextureRect" type="TextureRect" parent="mood"]
margin_top = 227.0
margin_right = 33.0
margin_bottom = 259.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="mood"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1.0
margin_top = -26.0
margin_right = 31.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.367188, 1 )
text = "+"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="mood/Label"]
anims/fade = SubResource( 5 )

[node name="fear" type="TextureProgress" parent="."]
editor/display_folded = true
margin_left = 878.0
margin_top = 81.0
margin_right = 910.0
margin_bottom = 303.0
value = 50.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 15 )
fill_mode = 3

[node name="TextureRect" type="TextureRect" parent="fear"]
margin_top = 227.0
margin_right = 33.0
margin_bottom = 259.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="fear"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1.0
margin_top = -26.0
margin_right = 31.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.367188, 1 )
text = "+"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="fear/Label"]
anims/fade = SubResource( 6 )

[node name="stress" type="TextureProgress" parent="."]
editor/display_folded = true
margin_left = 913.0
margin_top = 81.0
margin_right = 945.0
margin_bottom = 303.0
value = 50.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 17 )
fill_mode = 3

[node name="TextureRect" type="TextureRect" parent="stress"]
margin_top = 227.0
margin_right = 33.0
margin_bottom = 259.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="stress"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1.0
margin_top = -26.0
margin_right = 31.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.367188, 1 )
text = "+"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="stress/Label"]
anims/fade = SubResource( 7 )

[node name="turns" type="TextureRect" parent="."]
editor/display_folded = true
margin_left = 627.0
margin_top = 702.0
margin_right = 675.0
margin_bottom = 752.0
hint_tooltip = "Actions left"
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="turns"]
margin_left = 45.0
margin_top = 15.0
margin_right = 85.0
margin_bottom = 35.0
text = "x10"

[node name="mana" type="TextureRect" parent="."]
margin_left = 537.0
margin_top = 702.0
margin_right = 585.0
margin_bottom = 752.0
hint_tooltip = "Mana"
texture = ExtResource( 20 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="mana"]
margin_left = 50.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 35.0
text = "x10"

[node name="supply" type="TextureRect" parent="."]
editor/display_folded = true
margin_left = 158.0
margin_top = 702.0
margin_right = 206.0
margin_bottom = 752.0
hint_tooltip = "Supply"
texture = ExtResource( 21 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="supply"]
margin_left = 50.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 35.0
text = "x10"

[node name="gold" type="TextureRect" parent="."]
editor/display_folded = true
margin_left = 28.0
margin_top = 702.0
margin_right = 76.0
margin_bottom = 752.0
hint_tooltip = "Gold"
texture = ExtResource( 22 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="gold"]
margin_left = 50.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 35.0
text = "x10"

[node name="end" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 410.0
margin_top = 80.0
margin_right = 1019.0
margin_bottom = 642.0

[node name="Control" type="Control" parent="end"]
margin_left = -407.0
margin_top = -77.0
margin_right = 956.0
margin_bottom = 693.0

[node name="finishbutton" type="Button" parent="end"]
margin_left = 195.0
margin_top = 506.0
margin_right = 420.0
margin_bottom = 545.0
text = "Confirm"

[node name="RichTextLabel" type="RichTextLabel" parent="end"]
margin_left = 93.0
margin_top = 67.0
margin_right = 540.0
margin_bottom = 361.0
bbcode_enabled = true

[node name="sexswitch" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 410.0
margin_top = 80.0
margin_right = 1019.0
margin_bottom = 642.0

[node name="Control" type="Control" parent="sexswitch"]
margin_left = -407.0
margin_top = -77.0
margin_right = 956.0
margin_bottom = 693.0

[node name="confirmsex" type="Button" parent="sexswitch"]
margin_left = 195.0
margin_top = 456.0
margin_right = 420.0
margin_bottom = 495.0
text = "Proceed"

[node name="cancelsex" type="Button" parent="sexswitch"]
margin_left = 195.0
margin_top = 506.0
margin_right = 420.0
margin_bottom = 545.0
text = "Cancel"

[node name="RichTextLabel" type="RichTextLabel" parent="sexswitch"]
margin_left = 93.0
margin_top = 67.0
margin_right = 540.0
margin_bottom = 361.0
bbcode_enabled = true

[connection signal="pressed" from="panel/categories/Actions" to="." method="selectcategory" binds= [ "Actions" ]]
[connection signal="pressed" from="panel/categories/P&P" to="." method="selectcategory" binds= [ "P&P" ]]
[connection signal="pressed" from="panel/categories/Items" to="." method="selectcategory" binds= [ "Items" ]]
[connection signal="pressed" from="panel/categories/Location" to="." method="selectcategory" binds= [ "Location" ]]
[connection signal="pressed" from="end/finishbutton" to="." method="_on_finishbutton_pressed"]
[connection signal="pressed" from="sexswitch/confirmsex" to="." method="_on_confirmsex_pressed"]
[connection signal="pressed" from="sexswitch/cancelsex" to="." method="_on_cancelsex_pressed"]
